--- a/proyecto barraca-alianza/css/ba.css
+++ b/proyecto barraca-alianza/css/ba.css
@@ -159,7 +159,7 @@ h1{
 
  /* seccion productos detalles*/
 
- .contenedor-productos{ 
+ #contenedor-productos{ 
     margin-top: 15%;
     margin-bottom: 5%;
     margin-left: 4rem;
@@ -185,6 +185,8 @@ h1{
 
 .precio{
     margin-bottom: 1rem;
+    padding-left: .5rem;
+    padding-top: .6rem;
 }
 
 .producto-detalles{
@@ -199,10 +201,12 @@ h1{
 
 .producto-titulo{
     color: #646464;
+    font-weight: 500;
+    padding-left: .5rem;
 }
 
-.producto-detalles a{
-    display: block;
+a{
+ display: block;
 }
 
 img{
@@ -211,15 +215,15 @@ img{
 
 .producto-ver{
     background-color: white;
-    border: 2px solid black;
+    border: 1.5px solid black;
     border-radius: 5rem ;
+    width: 80%;
+    margin-left: 10%;
     text-align: center;
     text-transform: uppercase;
-    padding: .2rem;
-    margin-top: 1rem;
-    margin-bottom: 0;
+    padding: .4rem;
     color:#646464 ;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 .producto-ver:hover{
@@ -230,7 +234,7 @@ img{
 
 
 /* carrito*/
-.contenedor-carrito{
+#contenedor-carrito{
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
@@ -252,10 +256,25 @@ img{
     text-transform: uppercase;*/
 }
 
+.carrito-vacio-active{
+    position:absolute;
+    display:block;
+    padding: 80px;
+    margin-left: 30%;
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 400;
+    background-color: rgb(223, 17, 17);
+    color: white;
+    text-transform: uppercase;
+}
+
 .seguir-comprando{
-   margin-top: 5%;
-   margin-left: 30%;
-   position:absolute;  
+    position:fixed; 
+    display: block; 
+   margin-top: 28%;
+   margin-left: 80%;
+   
    border: 2px solid white;
    border-radius: 1rem;
    padding: 10px;
@@ -269,7 +288,7 @@ img{
     color:  rgb(201, 199, 199);
 }
 
-.carrito-productos{
+#carrito-productos{
     display: flex;
     flex-direction: column;
     gap:1rem ;
@@ -306,6 +325,10 @@ img{
     justify-content: space-between;
 }
 
+.carrito-acciones-active{
+    display: flex;
+    justify-content: space-between;
+}
 .carrito-acciones-vaciar{
     border: 0;
     background-color: #cfcfcf;
@@ -348,7 +371,7 @@ img{
 
 /* media screen*/
 
-@media (max-width: 800px){
+@media (max-width: 1000px){
     
     header{
         position: absolute;
@@ -477,7 +500,7 @@ img{
     }
     
    .imagen-fondo{
-       max-width: 1000px;
+       width: 200%;
        height: 200%;
        margin-top: 6rem ;
     } 
@@ -492,11 +515,11 @@ img{
         text-shadow: 0px 2px 5px black;
      }
 
-     .contenedor-productos{
+     #contenedor-productos{
         position: relative; 
         margin:20%;
         display: block;
-        width: 75%;
+        width: 65%;
         height: 400px;
 
     }
@@ -504,9 +527,10 @@ img{
    
     .producto{
         border: 1px solid #cfcfcf;
-        width: 75%;
+        width: 65%;
         height: 100%;
         margin: 10%;
+    
         
     }
 
