--- a/proyecto barraca-alianza/css/ba.css
+++ b/proyecto barraca-alianza/css/ba.css
@@ -107,6 +107,52 @@ h1{
     padding-right: 1rem;
     font-size: large;
 }
+#menu-desplegable{
+width: 100%;
+display: inline-block;
+position: absolute;
+z-index: 99;
+}
+
+.busqueda{
+    width: 100%;
+    height:50%; 
+    display: flex;
+    z-index: 99;
+    justify-content: space-between;
+    align-items: center;
+    background-color:rgb(202, 27, 27);
+    padding: .5rem;
+    padding-right: 1.5rem;
+    border-radius: 1rem;
+    font-weight: 600;
+    color: black;
+
+}
+#producto-ver-menu{
+   background-color: white;
+    border: 2px solid black;
+    border-radius: 5rem ;
+    width: 10%;
+    margin-left: 10%;
+    text-align: center;
+    text-transform: uppercase;
+    padding: 2px;
+    color:#646464 ;
+    font-weight: 700;
+    cursor: pointer;
+}
+#producto-ver-menu:hover{
+    border: 2px solid white;
+    background-color: rgb(202, 27, 27);
+    color: white;
+}
+.carrito-producto-precio-menu{
+    color: black;
+    font-size:medium
+}
+
+
 
 
 .navbar-categorias{
