--- a/proyecto barraca-alianza/css/ba.css
+++ b/proyecto barraca-alianza/css/ba.css
@@ -107,6 +107,7 @@ h1{
     padding-right: 1rem;
     font-size: large;
 }
+
 #menu-desplegable{
 width: 100%;
 display: inline-block;
@@ -151,6 +152,7 @@ z-index: 99;
     color: black;
     font-size:medium
 }
+
 
 
 
@@ -205,7 +207,7 @@ z-index: 99;
 
  /* seccion productos detalles*/
 
- .contenedor-productos{ 
+ #contenedor-productos{ 
     margin-top: 15%;
     margin-bottom: 5%;
     margin-left: 4rem;
@@ -219,18 +221,20 @@ z-index: 99;
 .producto{
     border: 1px solid #cfcfcf;
     width: 250px;
-    height: 300px;
+    height: 350px;
     position: relative;
 
 }
 
 .producto-imagen{
     width: 100%;
-    height: 60%;
+    height: 55%;
 }
 
 .precio{
     margin-bottom: 1rem;
+    padding-left: .5rem;
+    padding-top: .6rem;
 }
 
 .producto-detalles{
@@ -245,10 +249,12 @@ z-index: 99;
 
 .producto-titulo{
     color: #646464;
+    font-weight: 500;
+    padding-left: .5rem;
 }
 
-.producto-detalles a{
-    display: block;
+a{
+ display: block;
 }
 
 img{
@@ -256,16 +262,17 @@ img{
 }
 
 .producto-ver{
+   
     background-color: white;
-    border: 2px solid black;
+    border: 1.5px solid black;
     border-radius: 5rem ;
+    width: 80%;
+    margin-left: 10%;
     text-align: center;
     text-transform: uppercase;
-    padding: .2rem;
-    margin-top: 1rem;
-    margin-bottom: 0;
+    padding: .4rem;
     color:#646464 ;
-    font-weight: 500;
+    font-weight: 700;
 }
 
 .producto-ver:hover{
@@ -276,7 +283,7 @@ img{
 
 
 /* carrito*/
-.contenedor-carrito{
+#contenedor-carrito{
     display: flex;
     flex-direction: column;
     gap: 1.5rem;
@@ -285,9 +292,7 @@ img{
 }
 
 .carrito-vacio {
-    display: none;
-   /*position:absolute;
-    display:block;
+    position:absolute;
     padding: 80px;
     margin-left: 30%;
     text-align: center;
@@ -295,13 +300,16 @@ img{
     font-weight: 400;
     background-color: rgb(223, 17, 17);
     color: white;
-    text-transform: uppercase;*/
+    text-transform: uppercase;
 }
 
+
 .seguir-comprando{
-   margin-top: 5%;
-   margin-left: 30%;
-   position:absolute;  
+    position:fixed; 
+    display: block; 
+   margin-top: 28%;
+   margin-left: 80%;
+   
    border: 2px solid white;
    border-radius: 1rem;
    padding: 10px;
@@ -315,10 +323,11 @@ img{
     color:  rgb(201, 199, 199);
 }
 
-.carrito-productos{
+#carrito-productos{
     display: flex;
     flex-direction: column;
     gap:1rem ;
+   
     
 }
 
@@ -330,6 +339,8 @@ img{
     padding: .5rem;
     padding-right: 1.5rem;
     border-radius: 1rem;
+    font-weight: 600;
+    
 
 }
 
@@ -352,6 +363,10 @@ img{
     justify-content: space-between;
 }
 
+.carrito-acciones-active{
+    display: none;
+    justify-content: space-between;
+}
 .carrito-acciones-vaciar{
     border: 0;
     background-color: #cfcfcf;
@@ -375,6 +390,8 @@ img{
     border-top-left-radius: 1rem;
     border-bottom-left-radius: 1rem;
     color: black;
+    font-weight: 600;
+    font-size: large;
     text-transform: uppercase;
 }
 
@@ -394,7 +411,7 @@ img{
 
 /* media screen*/
 
-@media (max-width: 800px){
+@media (max-width: 1000px){
     
     header{
         position: absolute;
@@ -523,7 +540,7 @@ img{
     }
     
    .imagen-fondo{
-       max-width: 1000px;
+       width: 200%;
        height: 200%;
        margin-top: 6rem ;
     } 
@@ -538,11 +555,11 @@ img{
         text-shadow: 0px 2px 5px black;
      }
 
-     .contenedor-productos{
+     #contenedor-productos{
         position: relative; 
         margin:20%;
         display: block;
-        width: 75%;
+        width: 65%;
         height: 400px;
 
     }
@@ -550,9 +567,10 @@ img{
    
     .producto{
         border: 1px solid #cfcfcf;
-        width: 75%;
+        width: 65%;
         height: 100%;
         margin: 10%;
+    
         
     }
 
